#29 Show expiration time with countdown

--- a/frontend/client/main.html
+++ b/frontend/client/main.html
@@ -107,6 +107,10 @@
           <td>Last bid time</td>
           <td>{{auctionlet.last_bid_time}}</td>
         </tr>
+        <tr>
+          <td>Time remaining</td>
+          <td>{{countdown}} seconds</td>
+        </tr>
       {{/unless}}
       <tr>
         {{#if auctionlet.base}}
