--- a/frontend/imports/client/newauction.html
+++ b/frontend/imports/client/newauction.html
@@ -1,42 +1,34 @@
 <template name="newauction">
   <div class="boxDiv">
-  <h2>New auction</h2>
-  <table>
-    <tbody>
-      <tr>
-        <td>Sell amount</td>
-        <td><input type="number" min="0" {{b "value: sellamount"}}> <a class="MKR" href="{{etherscanHref}}{{MKRToken.address}}" target="_blank">{{MKRToken.name}}</a></td>
-      </tr>
-      <tr>
-        <td>Start bid</td>
-        <td><input type="number" min="0" {{b "value: startbid"}}> <a class="ETH" href="{{etherscanHref}}{{ETHToken.address}}" target="_blank">{{ETHToken.name}}</a></td>
-      </tr>
-      <tr>
-        <td>Minimum increase</td>
-        <td><input type="number" min="1" step="1" {{b "value: minimumincrease"}}> %</td>
-      </tr>
-      <tr>
-        <td>Duration</td>
-        <td><input type="number" min="0" {{b "value: duration"}}> seconds</td>
-      </tr>
-    </tbody>
-    <tfoot>
-      <tr>
-        <td><button class="btn btn-primary" {{b "click: create"}}>Create auction</button></td>
-      </tr>
-      {{#if newAuctionMessage}}
-        <div class="messageDiv alert {{newAuctionMessageType}}">
+    <h2>New auction</h2>
+    <table>
+      <tbody>
         <tr>
-          <td><span id='newAuctionMessage'>{{newAuctionMessage}}</span></td>
+          <td>Sell amount</td>
+          <td><input type="number" min="0" {{b "value: sellamount"}}> <span class="MKR">{{MKRToken.name}}</span></td>
         </tr>
+        <tr>
+          <td>Start bid</td>
+          <td><input type="number" min="0" {{b "value: startbid"}}> <span class="ETH">{{ETHToken.name}}</span></td>
+        </tr>
+        <tr>
+          <td>Minimum increase</td>
+          <td><input type="number" min="1" step="1" {{b "value: minimumincrease"}}> %</td>
+        </tr>
+        <tr>
+          <td>Duration</td>
+          <td><input type="number" min="0" {{b "value: duration"}}> seconds</td>
+        </tr>
+      </tbody>
+    </table>
+    {{#if newAuctionMessage}}
+      <div class="messageDiv alert {{newAuctionMessageType}}">
+        <span id='newAuctionMessage'>{{newAuctionMessage}}</span>
         {{#if newAuctionUrl}}
-          <tr>
-            <td><span>Your new auction can be found at <a href="{{newAuctionUrl}}">{{newAuctionUrl}}</a></span></td>
-          </tr>
+            <span>Your new auction can be found at <a href="{{newAuctionUrl}}">{{newAuctionUrl}}</a></span>
         {{/if}}
-        </div>
-      {{/if}}
-    </tfoot>
-  </table>
+      </div>
+    {{/if}}
+    <button class="btn btn-primary" {{b "click: create"}}>Create auction</button>
   </div>
 </template>
