--- a/frontend/imports/client/balance.html
+++ b/frontend/imports/client/balance.html
@@ -11,7 +11,7 @@
       </span>
       {{#unless hasETHTokens}}
         <br>
-        <span class="alert alert-warning ethTokensSpan">You currently have 0 ETH tokens, you can exchange ETH for ETH tokens <a href="https://mkr.market/" target="_blank">here</a></span>
+        <span class="alert alert-warning ethTokensSpan">You currently have 0 ETH tokens, you can exchange ETH for ETH tokens on <a href="https://mkr.market/" target="_blank">mkr.market</a></span>
       {{/unless}}
     </div>
 </template>
