--- a/frontend/imports/client/newauction.html
+++ b/frontend/imports/client/newauction.html
@@ -1,6 +1,9 @@
 <template name="newauction">
   <div class="boxDiv">
     <h2>New auction</h2>
+    <p class="text-danger">
+      <strong>Experimental:</strong> Only create auctions with a small amount and short duration!
+    </p>
     <table>
       <tbody>
         <tr>
