--- a/frontend/imports/client/newauction.html
+++ b/frontend/imports/client/newauction.html
@@ -26,7 +26,7 @@
     </table>
     {{#if newAuctionMessage}}
       <div class="messageDiv alert alert-{{newAuctionMessage.type}}">
-        <span id='newAuctionMessage'>{{newAuctionMessage.message}}</span>
+        <span id='newAuctionMessage'>{{{newAuctionMessage.message}}}</span>
         {{#if newAuctionUrl}}
             <span>Your new auction can be found at <a href="{{newAuctionUrl}}">{{newAuctionUrl}}</a></span>
         {{/if}}
