--- a/frontend/imports/client/auctionlet.html
+++ b/frontend/imports/client/auctionlet.html
@@ -34,15 +34,22 @@
       </table>
       {{#unless expired}}
       <div class="form-group">
+        {{#if bidProgress}}
+        <div class="progress">
+          <div class="progress-bar progress-bar-success progress-bar-striped active" role="progressbar" aria-valuenow="{{bidProgress}}" aria-valuemin="0" aria-valuemax="100" style="width: {{bidProgress}}%">
+            {{ bidMessage }}}
+          </div>
+        </div>
+        {{/if}}
         {{#if bidMessage}}
           <span id='spnBidMessage' class="messageSpan alert alert-{{bidMessageType}}">{{{ bidMessage }}}</span>
           <br>
         {{/if}}
         <label for="inputBid">Enter a bid for the auctionlet</label>
         <br>
-        <input class="form-control" id="inputBid" type="number" min="{{bid}}" value="{{bid}}" {{b "value: bid"}}> <span class="ETH">{{ETHToken.name}}</span>
+        <input class="form-control" id="inputBid" type="number" {{bidsDisabled}} value="{{bid}}" {{b "value: bid"}}> <span class="ETH">{{ETHToken.name}}</span>
         <br>
-        <button class="btn btn-primary" {{b "click: create"}}>Place bid</button>
+        <button class="btn btn-primary" {{bidsDisabled}} {{b "click: create"}}>Place bid</button>
       </div>
       {{else}}
       <div class="form-group">
