--- a/frontend/imports/client/network-status.html
+++ b/frontend/imports/client/network-status.html
@@ -18,9 +18,5 @@
       {{/if}}
     </ul>
   </div>
-  <div id="accountDiv">
-    <span>Your account: <a href="{{etherscanHref}}{{account}}" target="_blank">{{account}}</a></span>
-    <br>
-    <span>Auction contract: <a href="{{etherscanHref}}{{contract}}" target="_blank">{{contract}}</a></span>
-  </div>
+  {{> accountSelector}}
 </template>
