disabling action buttons when syncing or is out of sync. Closes #56

--- a/frontend/imports/client/newauction.html
+++ b/frontend/imports/client/newauction.html
@@ -32,6 +32,7 @@
         {{/if}}
       </div>
     {{/if}}
-    <button class="btn btn-primary" {{b "click: create"}}>Create auction</button>
+    <button class="btn btn-primary" {{b "click: create"}} disabled="{{or syncing outOfSync}}">Create auction</button>
+    {{#if or syncing outOfSync}} Waiting for synchronization...{{/if}}
   </div>
 </template>
