Added fixes for 46 & 50

--- a/frontend/imports/client/auction.html
+++ b/frontend/imports/client/auction.html
@@ -20,7 +20,7 @@
         <td>{{auction.min_increase}}%</td>
       </tr>
       <tr>
-        <td>Duration</td>
+        <td>Duration <i>(after last bid)</i></td>
         <td>{{auction.duration}} seconds</td>
       </tr>
     </table>
