--- a/frontend/imports/client/newauction.html
+++ b/frontend/imports/client/newauction.html
@@ -39,6 +39,7 @@
         {{/if}}
       </div>
     {{/if}}
-    <button class="btn btn-primary" {{newAuctionDisabled}} {{b "click: create"}}>Create auction</button>
+    <button class="btn btn-primary" {{newAuctionDisabled}} {{b "click: create"}} disabled="{{or syncing outOfSync}}">Create auction</button>
+    {{#if or syncing outOfSync}} Waiting for synchronization...{{/if}}
   </div>
 </template>
