--- a/frontend/imports/client/auctionlet.html
+++ b/frontend/imports/client/auctionlet.html
@@ -63,12 +63,14 @@
           <tr>
             <th>Creator</th>
             <th>Bid Price</th>
+            <th>Unit Price</th>
             <th>Bid Time</th>
           </tr>
           {{#each auctionlet.history}}
             <tr>
               <td>{{last_bidder}}</td>
               <td>{{formatBalance (fromWei buy_amount)}}</td>
+              <td>{{formatBalance (unit_price)}}</td>
               <td>{{last_bid_time}}</td>
             </tr>
           {{/each}}
